Alignment issues in Live form are fixed for ios.

--- a/src/main/webapp/scripts/modules/layouts/styles/less/layouts.less
+++ b/src/main/webapp/scripts/modules/layouts/styles/less/layouts.less
@@ -365,9 +365,6 @@ body {
     > .panel-body {
         padding: 4px 4px 0 4px;
     }
-    .navbar-btn {
-      margin-top: 0;
-    }
     .app-label {
         overflow-x: hidden;
         text-overflow: ellipsis;
@@ -448,7 +445,6 @@ body {
       }
   }
 
-
   .full-width {
     width: 100%;
   }
@@ -462,12 +458,6 @@ body {
   }
   }
 
-  .app-device-liveform {
-    .btn {
-      line-height: 36pt;
-      padding: 0 3pt;
-    }
-  }
   .app-liveform-dialog {
     .app-dialog-body {
       padding: 0;
